# DAA-Lab

./: CMakeLists.txt  CMakeLists.txt~  README.md  compile.sh
src/BinaryTree(Recursion)(13MA20004)/: bintree_recursion.c  bintree_recursion.c~
src/BinaryTree(Rotation)/: bintree_rot.c  bintree_rot1.c  bintree_rot2.c
src/BinaryTree(Rotation)(13MA20004)/: a.out  bintree_rot1.c~  bintree_rot2.c~  bintree_rot3.c  bintree_rot3.c~
src/BinaryTree(Traversal)/: bintree_inorder_dft.c  bintree_postorder_dft.c  bintree_preorder_dft.c
src/BinaryTree(Traversal)(13MA20004)/: a.out  bintree_traversal.c  bintree_traversal.c~
src/DynamicSet/: dynamic_set_pointer_based.c
src/DynamicSet(13MA20004)/: a.out  dynamic_set_array_based.c  input
src/ExpressionEvaluation/: infix.c  input2  prefix.c
src/ExpressionEvaluation(13MA20004)/: CMakeLists.txt  README.md  infix  input1  input3  paranthesis.c  postfix  postfix.c  prefix
src/ExpressionEvaluation(Using Stack)/: eval_postfix.c  eval_prefix.c  postfix.input
src/ExpressionEvaluation(Using Stack)(13MA20004)/: prefix.input
src/Matrix/: .Matrix0.c.swp  M.in
src/Matrix(13MA20004)/: .help.swp  M1.in  Mat1  Matrix0.c  Matrix1.c  Matrix1.c~  a.out
src/PolynomialAddition(13MA20004)/: merge_sorted_array0.c  merge_sorted_list_0.c  merge_sorted_list_1.c
