cmake_minimum_required (VERSION 2.6)
project (DAA_LAB)
add_executable(Expression_Eval/Infix src/ExpressionEvaluation\(13MA20004\)/infix.c)
add_executable(Expression_Eval/Postfix src/ExpressionEvaluation\(13MA20004\)/postfix.c)
add_executable(Expression_Eval/Prefix src/ExpressionEvaluation\(13MA20004\)/prefix.c)
add_executable(BinTree_Recursion/Bintree_recursion src/BinaryTree\(Recursion\)\(13MA20004\)/bintree_recursion.c)
add_executable(BinTree_Rotation/bintree_rot1 src/BinaryTree\(Rotation\)\(13MA20004\)/bintree_rot.c)
add_executable(BinTree_Rotation/bintree_rot2 src/BinaryTree\(Rotation\)\(13MA20004\)/bintree_rot1.c)
add_executable(BinTree_Rotation/bintree_rot3 src/BinaryTree\(Rotation\)\(13MA20004\)/bintree_rot2.c)
add_executable(BinTree_Rotation/bintree_rot4 src/BinaryTree\(Rotation\)\(13MA20004\)/bintree_rot3.c)
add_executable(Dynamic_Set/dynamic_set_array_based src/DynamicSet\(13MA20004\)/dynamic_set_array_based.c)
add_executable(Dynamic_Set/dynamic_set_pointer_based src/DynamicSet\(13MA20004\)/dynamic_set_pointer_based.c)
add_executable(BinTree_Traversal/bintree_traversal src/BinaryTree\(Traversal\)\(13MA20004\)/bintree_traversal.c)
add_executable(Matrix/matrix1 src/Matrix\(13MA20004\)/Matrix0.c)
add_executable(Matrix/matrix2 src/Matrix\(13MA20004\)/Matrix1.c)
