cmake_minimum_required (VERSION 2.6)
project (DAA_LAB)
add_executable(Expression_Eval/Infix src/ExpressionEvaluation/infix.c)
add_executable(Expression_Eval/Postfix src/ExpressionEvaluation/postfix.c)
add_executable(Expression_Eval/Prefix src/ExpressionEvaluation/prefix.c)
add_executable(BinTree_Recursion/Bintree_recursion src/BinaryTree\(Recursion\)/bintree_recursion.c)
add_executable(BinTree_Rotation/bintree_rot1 src/BinaryTree\(Rotation\)/bintree_rot.c)
add_executable(BinTree_Rotation/bintree_rot2 src/BinaryTree\(Rotation\)/bintree_rot1.c)
add_executable(BinTree_Rotation/bintree_rot3 src/BinaryTree\(Rotation\)/bintree_rot2.c)
add_executable(BinTree_Rotation/bintree_rot4 src/BinaryTree\(Rotation\)/bintree_rot3.c)
add_executable(Dynamic_Set/dynamic_set_array_based src/DynamicSet/dynamic_set_array_based.c)
add_executable(Dynamic_Set/dynamic_set_pointer_based src/DynamicSet/dynamic_set_pointer_based.c)
add_executable(BinTree_Traversal/bintree_inorder_dft src/BinaryTree\(Traversal\)/bintree_inorder_dft.c)
add_executable(BinTree_Traversal/bintree_postorder_dft src/BinaryTree\(Traversal\)/bintree_postorder_dft.c)
add_executable(BinTree_Traversal/bintree_preorder_dft src/BinaryTree\(Traversal\)/bintree_preorder_dft.c)
add_executable(Matrix/matrix1 src/Matrix/Matrix0.c)
add_executable(Matrix/matrix2 src/Matrix/Matrix1.c)
add_executable(Polynomial_Addition/polynomialaddition_pointer src/PolynomialAddition/merge_sorted_list_0.c)
add_executable(Polynomial_Addition/polynomialaddition_array0 src/PolynomialAddition/merge_sorted_array0.c)
add_executable(Polynomial_Addition/polynomialaddition_array1 src/PolynomialAddition/merge_sorted_list_1.c)
add_executable(Expression_Eval_Stack/eval_postfix src/ExpressionEvaluation\(Using\ Stack\)/eval_postfix.c)
add_executable(Expression_Eval_Stack/eval_prefix src/ExpressionEvaluation\(Using\ Stack\)/eval_prefix.c)

